# copperspice

./: CMakeLists.txt
src/dbus/: CMakeLists.txt  qdbusabstractadaptor.cpp  qdbusabstractinterface.cpp  qdbusargument.cpp  qdbusargument.h  qdbusargument_p.h  qdbuserror.cpp  qdbusextratypes.h  qdbusintegrator.cpp  qdbusintegrator_p.h  qdbusinternalfilters.cpp  qdbusmacros.h  qdbusmarshaller.cpp  qdbusmessage.cpp  qdbusmetatype.cpp  qdbusmetatype.h  qdbuspendingreply.h  qdbusreply.cpp  qdbusreply.h  qdbusunixfiledescriptor.h  qdbusutil.cpp  qdbusutil_p.h
src/gui/image/: image.cmake
src/gui/painting/: painting.cmake
test/core/containers/: qlist.cpp
test/core/io/: qsettings.cpp
test/core/kernel/: qmetamethod.cpp
